@@ -10,6 +10,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Support VerilatedFstC set_time_unit, bug1433. [Pieter Kapsenberg]
 
+****  Support deferred assertions, bug1449. [Charles Eddleston]
+
 ****  Mark infrequently called functions with GCC cold attribute.
 
 ****  Fix sign-compare warning in verilated.cpp, bug1437. [Sergey Kvachonok]
